--- a/src/Square.css
+++ b/src/Square.css
@@ -13,6 +13,7 @@
   border-radius: 3px;
   position: relative;
   left: 50%;
+  pointer-events: all;
 }
 
 button:focus {
@@ -37,6 +38,8 @@ button:focus {
 .square-wall {
   background: #e8e8e8;
   border: 1px solid #cccccc;
+  /*animation-name: grow;
+  animation-duration: 0.1s;*/
 }
 
 .square-path {
@@ -47,4 +50,19 @@ button:focus {
 .square-visited {
   background: #e3effc;
   border: 1px solid #c2dffc;
+}
+
+
+/* Animations*/
+@keyframes grow {
+  0% {
+      transform: scale(0.0);
+      -webkit-transform: scale(0.0);
+  }
+
+
+  100% {
+      transform: scale(1.0);
+      -webkit-transform: scale(1.0);
+  }
 }
